updated app.json file

--- a/app.json
+++ b/app.json
@@ -6,5 +6,6 @@
         }
     },
     "name": "Warehouse Worker",
+    "descripton": "Heroku application for automatically creating unlocked package versions and installing them in a DevHub org as part of a pipeline.",
     "repository": "https://github.com/RecommendedBadges/warehouse-worker"
 }
