--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
         "@salesforce/cli": "^2.47.6",
         "axios": "^1.7.2",
         "bull": "^4.14.0",
-        "express": "^4.19.2",
         "throng": "^5.0.0"
+    },
+    "engines": {
+        "node": "22.x",
+        "npm": "10.x"
     },
     "scripts": {
         "start": "nf start"
