--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "worker.js",
     "license": "MIT",
     "dependencies": {
-        "@salesforce/cli": "^2.49.4",
+        "@honeybadger-io/js": "^6.9.3",
+        "@salesforce/cli": "^2.49.1",
         "axios": "^1.7.2",
         "bull": "^4.15.0",
         "throng": "^5.0.0"
